fixed was not a necessary media query, should have no overflow now

--- a/src/components/Header/header.css
+++ b/src/components/Header/header.css
@@ -53,7 +53,7 @@
 @media (max-width: 478px) {
 	.video-container video {
 		/*in widescreen,fixed causes bottom overflow, so it changes for phones only*/
-		position: fixed;
+		/*position: fixed;*/
 		min-height: 120%;
 	}
 
